--- a/webpack/npmNew/package.json
+++ b/webpack/npmNew/package.json
@@ -15,5 +15,8 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "babel": {
+    "presets": ["@babel/preset-env"]
   }
 }
