--- a/angular/ngalain/package.json
+++ b/angular/ngalain/package.json
@@ -11,38 +11,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^9.1.12",
-    "@angular/animations": "~10.0.4",
-    "@angular/common": "~10.0.4",
-    "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
-    "@angular/platform-browser": "~10.0.4",
-    "@angular/platform-browser-dynamic": "~10.0.4",
-    "@angular/router": "~10.0.4",
-    "ng-alain": "^9.5.5",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "@angular/animations": "~8.2.14",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "angular-in-memory-web-api": "^0.11.0",
+    "ng-zorro-antd": "^8.5.2",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1",
+    "@ant-design/icons-angular": "^9.0.0",
+    "@antv/data-set": "^0.10.2",
+    "@antv/g2": "^3.5.11",
+    "@antv/g2-plugin-slider": "^2.1.1",
+    "@antv/l7": "^2.1.5",
+    "xlsx": "^0.16.6",
+    "ng-alain": "^8.4.0",
+    "@delon/abc": "^8.9.0",
+    "@delon/acl": "^8.9.0",
+    "@delon/auth": "^8.9.0",
+    "@delon/cache": "^8.9.0",
+    "@delon/chart": "^8.9.0",
+    "@delon/form": "^8.9.0",
+    "@delon/mock": "^8.9.0",
+    "@delon/theme": "^8.9.0",
+    "@delon/util": "^8.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.3",
-    "@angular/cli": "9",
-    "@angular/compiler-cli": "~10.0.4",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "~0.803.28",
+    "@angular/cli": "~8.3.28",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3",
+    "ng-alain": "^8.4.0"
   }
 }
