--- a/angular/ngalain/tsconfig.base.json
+++ b/angular/ngalain/tsconfig.base.json
@@ -11,7 +11,8 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "module": "es2020",
+    // "module": "es2020",
+    "module": "amd",
     "lib": [
       "es2018",
       "dom"
