--- a/java/projects/my-shop/my-shop-commons/pom.xml
+++ b/java/projects/my-shop/my-shop-commons/pom.xml
@@ -59,6 +59,21 @@
         </dependency>
         <!-- Servlet End -->
 
+        <!-- Json Begin -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <!-- Json End -->
+
     </dependencies>
 
 </project>
